--- a/app/templates/scholarship/index.html
+++ b/app/templates/scholarship/index.html
@@ -1,20 +1,16 @@
 {% extends 'base.html' %}
-
-{% block title %}My Scholarships{% endblock %}
-
+{% block header %}
+  <h1>Scholarship Tracker</h1>
+{% endblock %}
 {% block content %}
-<h2>My Scholarships</h2>
-<a href="{{ url_for('scholarship.create') }}" class="btn btn-primary mb-3">Add Scholarship</a>
-
-<ul class="list-group">
-  {% for s in scholarships %}
-    <li class="list-group-item">
-      <strong>{{ s['name'] }}</strong> - ${{ s['amount'] }} - {{ s['status'] }}
-      <br>Deadline: {{ s['deadline'] }}
-      <p>{{ s['notes'] }}</p>
-    </li>
-  {% else %}
-    <li class="list-group-item">No scholarships yet.</li>
-  {% endfor %}
-</ul>
+  <a class="btn btn-primary" href="{{ url_for('scholarship.create') }}">Add Scholarship</a>
+  <ul class="list-group mt-3">
+    {% for s in scholarships %}
+      <li class="list-group-item">
+        <strong>{{ s['name'] }}</strong> - ${{ s['amount'] }} - Due: {{ s['deadline'] }} - Status: {{ s['status'] }}
+      </li>
+    {% else %}
+      <li class="list-group-item">No scholarships yet.</li>
+    {% endfor %}
+  </ul>
 {% endblock %}
