--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -31,6 +31,11 @@
             <input type="password" class="form-control" id="password" name="password" required>
           </div>
 
+          <div class="form-check mb-3">
+            <input class="form-check-input" type="checkbox" id="remember" name="remember">
+            <label class="form-check-label" for="remember">Remember Me</label>
+          </div>
+
           <div class="d-grid">
             <button type="submit" class="btn btn-primary">Log In</button>
           </div>
